refactor(T-0006): migrate backend to JDK 21 — config + syntax modernization